# AI-Platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/backend/src/backend/: main.py
apps/backend/src/backend/api/: agents.py  custom_agents.py  deps.py  enablements.py  execution.py  mcp_servers.py  routes.py  users.py
apps/backend/src/backend/models/: schemas.py
apps/backend/src/backend/store/: memory.py
apps/backend/tests/: conftest.py  test_rbac.py
apps/frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx  types.ts
apps/frontend/src/api/: client.ts
apps/frontend/src/auth/: AuthGate.tsx
apps/frontend/src/components/: Markdown.tsx  ResultView.tsx
apps/frontend/src/context/: UserContext.tsx
apps/frontend/src/lib/: stream.ts
apps/frontend/src/pages/: AdminRbacPage.tsx  CustomAgentsPage.tsx  ExecutePage.tsx  MyToolsPage.tsx  RegistryPage.tsx
apps/sandbox/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/sandbox/src/sandbox/: agent.py  llm.py  main.py  mcp_apps.py  mcp_client.py  mcp_server.py  tools.py
docs/: architecture.md
