[project]
name = "backend"
version = "0.1.0"
description = "AI Platform backend"
readme = "README.md"
authors = [
    { name = "Joonki Lee", email = "nuts_love86@yahoo.co.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "pytest>=8.3.0",
]
