[project]
name = "sandbox"
version = "0.1.0"
description = "Prototype A2A agents and MCP servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "google-genai>=1.0.0",
    "langsmith>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "pytest>=8.3.0",
]
